<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<resources>
    <string name="app_name">Immersive mode</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="behavior">Behavior</string>
    <string name="type">Type</string>

    <string name="enable_low_profile_mode">Enable Low Profile Mode</string>
    <string name="hide_navigation_bar">Hide Navigation bar</string>
    <string name="hide_status_bar">Hide Status Bar</string>
    <string name="enable_immersive_mode">Enable Immersive Mode</string>
    <string name="enable_immersive_mode_sticky">Enable Immersive Mode (Sticky)</string>
    <string name="do_things">Do things!</string>
    <string name="common_flag_presets">Common flag presets</string>
    <string name="immersive_mode">Immersive Mode</string>
    <string name="leanback_mode">Leanback Mode</string>
</resources>
