<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="80dp">

    <CheckBox
        android:id="@+id/flag_enable_lowprof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_low_profile_mode" />

    <CheckBox
        android:id="@+id/flag_hide_navbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hide_navigation_bar" />

    <CheckBox
        android:id="@+id/flag_hide_statbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hide_status_bar" />

    <CheckBox
        android:id="@+id/flag_enable_immersive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_immersive_mode" />

    <CheckBox
        android:id="@+id/flag_enable_immersive_sticky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_immersive_mode_sticky" />

    <Button
        android:id="@+id/btn_changeFlags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_things" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/common_flag_presets" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_immersive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/immersive_mode" />

        <Button
            android:id="@+id/btn_leanback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leanback_mode" />

    </LinearLayout>
</LinearLayout>